# daschland-scripts

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .vulture_whitelist.py  2024-06-18_155500_id2iri_mapping_localhost.json  2024-06-18_161751_id2iri_mapping_localhost.json  2024-06-18_163013_id2iri_mapping_localhost.json  2024-06-18_163640_id2iri_mapping_localhost.json  2024-06-18_164511_id2iri_mapping_localhost.json  2024-06-18_170623_id2iri_mapping_localhost.json  2024-06-19_100235_id2iri_mapping_localhost.json  2024-06-19_105928_id2iri_mapping_localhost.json  2024-06-19_111831_id2iri_mapping_localhost.json  2024-06-19_113120_id2iri_mapping_localhost.json  2024-06-19_113705_id2iri_mapping_localhost.json  2024-06-20_154247_id2iri_mapping_localhost.json  2024-06-20_154507_id2iri_mapping_localhost.json  2024-06-20_155206_id2iri_mapping_localhost.json  2024-06-20_160545_id2iri_mapping_localhost.json  2024-06-20_160859_id2iri_mapping_localhost.json  2024-06-24_114356_id2iri_mapping_localhost.json  2024-06-24_114821_id2iri_mapping_localhost.json  2024-06-24_115553_id2iri_mapping_localhost.json  CLAUDE.md  Documentation.docx  README.md  Search Documentation.docx  XML_syntax_errors_2024-06-18_152627.csv  daschland.json  daschland_data.xml  daschland_data_excel2xml.xml  daschland_data_validation_error.csv  daschland_data_version_1.xml  daschland_header.txt  dashland_data.xml  data_daschland.xml  data_daschland_validation_error.csv  database-data-model-documentation.md  folder-structure.md  header.xlsx  (+8 more)
.github/workflows/: automated-tests.yml  create-on-stage.yml  xmlupload.yml
Nodegoat/: Archive.csv  Audio.csv  AudioSegment.csv  Book.csv  BookChapter.csv  BookCover.csv  BookEdition.csv  Character.csv  Event.csv  Image.csv  Location.csv  Material.csv  Region.csv  Video.csv  VideoSegment.csv
daschland_ontology/: json_header.xlsx
daschland_ontology/alternative_daschland (Alternative DaSCHland)/: properties.xlsx  resources.xlsx
daschland_ontology/daschland (Alice in DaSCHland)/: properties.xlsx  resources.xlsx
daschland_ontology/lists/: list.xlsx
daschland_ontology/metadata (Metadata)/: properties.xlsx  resources.xlsx
daschland_ontology/project-metadata (Project Metadata)/: properties.xlsx  resources.xlsx
data/Spreadsheet_Data/: AliceInWonderlandCharacter.csv  AliceInWonderlandCharacter.xlsx  AnimalCharacter.csv  AnimalCharacter.xlsx  Archive.xlsx  Audio.xlsx  AudioSegment.xlsx  Book.xlsx  BookChapter.xlsx  BookCover.xlsx  BookEdition.xlsx  Character.xlsx  CharacterRestricted.xlsx  Documentation.xlsx  Dungeon.xlsx  Event.xlsx  Fairytale.xlsx  FairytaleChapter.xlsx  Flyer.xlsx  HumanCharacter.csv  HumanCharacter.xlsx  HumanCharacterRestricted.xlsx  Image.xlsx  ImageAnimal.xlsx  ImageHuman.xlsx  ImageWonderlandCharacter.xlsx  ImagesAnimal.xlsx  ImagesHuman.csv  ImagesHuman.xlsx  Location.xlsx  Material.xlsx  Originals.xlsx  Region.xlsx  Video.xlsx  VideoSegment.xlsx  ~$ImagesHuman.xlsx
data/XML/: import_animal_character.xml  import_archive.xml  import_audio.xml  import_audio_new.xml  import_book.xml  import_book_chapter.xml  import_book_edition.xml  import_character.xml  import_documentation.xml  import_dungeon.xml  import_event.xml  import_fairytale.xml  import_fairytale_chapter.xml  import_flyer.xml  import_image.xml  import_image_animal.xml  import_image_human.xml  import_image_new.xml  import_image_old.xml  import_image_wonderland_character.xml  import_location.xml  import_material.xml  import_originals.xml  import_video.xml  import_wonderland_character.xml
data/daschland_ontology/: json_header.xlsx
data/nodegoat/: Archive.csv  Audio.csv  AudioSegment.csv  BookChapter.csv  BookCover.csv  BookEdition.csv  Character.csv  Documentation.csv  Event.csv  Image.csv  Location.csv  Material.csv  Video.csv
data/output/: daschland.json  data_daschland.xml
data/processed/: Archive.csv  Audio.csv  AudioSegment.csv  BookChapter.csv  BookEdition.csv  Character.csv  Documentation.csv  Image.csv  LinkObject.csv  List_Event_Type.csv  List_Keyword.csv  List_Role.csv  Material.csv  Story.csv  StoryChapter.csv  Video.csv
data/raw/: Archive.xlsx  Audio.xlsx  AudioSegment.xlsx  BookEdition.xlsx  (+12 more)
documentation/: Database Documentation.docx  Documentation.docx  Project Documentation.docx
nodegoat/: Archive.csv  Audio.csv  BookCover.csv  BookEdition.csv  Character.csv  Documentation.csv  Image.csv  List_License.csv  Material.csv  Video.csv
output/: daschland.json  data_daschland.xml
src/: folder_paths.py  main.py  run_scripts.py
(+215 files in other folders)
