[project]
name = "daschland-scripts"
version = "0.1.0"
description = "Example project to explore the capabilities of the DSP (DaSCH Service Platform)"
authors = [
    { name = "Daniela Subotic", email = "48174709+danielasubotic@users.noreply.github.com" },
    { name = "Noémi Amberg", email = "117180458+Notheturtle@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dsp-tools",
    "icecream",
    "pillow",
    "pymediainfo",
    "pyexiftool",
    "ruff",
    "mypy",
    "pandas",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.ruff]
line-length = 120
