[project]
name = "daschland-scripts"
version = "0.1.0"
description = "Example project to explore the capabilities of the DSP (DaSCH Service Platform)"
authors = [
    { name = "Daniela Subotic", email = "48174709+danielasubotic@users.noreply.github.com" },
    { name = "Noémi Amberg", email = "117180458+Notheturtle@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dsp-tools",
    "icecream",
    "pillow",
    "pymediainfo",
    "pyexiftool",
    "ruff",
    "mypy",
    "pandas",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.ruff]
line-length = 120


[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "pandas-stubs>=2.2.3.250308",
    "types-lxml>=2025.3.30",
    "types-regex>=2024.11.6.20250403",
]


[tool.mypy]
mypy_path = "src"
show_column_numbers = true
strict = true
enable_error_code = ["possibly-undefined"]



[[tool.mypy.overrides]]
# For these packages, no type stubs are available yet:
module = ["exiftool.*", "icecream.*"]
ignore_missing_imports = true
