[project]
name = "daschland-scripts"
version = "0.1.0"
description = "Example project to explore the capabilities of the DSP (DaSCH Service Platform)"
authors = [
    { name = "Daniela Subotic", email = "48174709+danielasubotic@users.noreply.github.com" },
    { name = "Noémi Amberg", email = "117180458+Notheturtle@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dsp-tools",
    "icecream",
    "pillow",
    "pymediainfo",
    "pyexiftool",
    "ruff",
    "mypy",
    "pandas",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]


[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "pandas-stubs>=2.2.3.250308",
    "pytest>=8.3.5",
    "types-lxml>=2025.3.30",
    "types-regex>=2024.11.6.20250403",
    "vulture>=2.14",
]


[tool.ruff]
line-length = 120


[tool.ruff.lint]
select = [
    "RUF",   # ruff-specific rules
    "PL",    # pylint
    "I",     # isort
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "A",     # flake8-builtins
    "BLE",   # flake8-blind-except
    "ARG",   # flake8-unused-arguments
    "YTT",   # flake8-2020 plugin, which checks for misuse of `sys.version` or `sys.version_info`
    "ISC",   # flake8-implicit-str-concat plugin, which checks for problematic string concatenation
    "INP",   # flake8-no-pep420 plugin, which checks for missing __init__.py files
    "PIE",   # flake8-pie plugin, which does miscellaneous checks
    "PT",    # flake8-pytest-style plugin
    "TID",   # flake8-tidy-imports plugin
    "ICN",   # flake8-import-conventions plugin, which checks for import conventions
    "PGH",   # pygrep-hooks: A collection of fast, cheap, regex based pre-commit hooks
    "UP",    # pyupgrade
    "B023",  # flake8-bugbear: function-uses-loop-variable
]
ignore = [
    "UP007", # don't use Optional[X], Union[X, Y]
    "UP015", # unnecessary mode argument
    "PLR0912", # too many branches
    "PLR0915", # too many statements
]


[tool.mypy]
mypy_path = "src"
show_column_numbers = true
strict = true
enable_error_code = ["possibly-undefined"]


[[tool.mypy.overrides]]
# For these packages, no type stubs are available yet:
module = ["exiftool.*", "icecream.*"]
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
# see https://docs.pytest.org/en/latest/explanation/goodpractices.html#tests-outside-application-code
pythonpath = [".", "src", "test"]


[tool.vulture]
paths = ["src"]
